2015-01-22  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.0.1

	* src/Makefile.in (build/neug.o, build/sha256.o): Use -O3.

2015-01-21  Niibe Yutaka  <gniibe@fsij.org>

	* src/neug.ld.in (.text): Add ALIGN(8) at the end.

	* fraucheky: Update to 0.1.

2014-12-10  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx: Update to 0.04.

	* src/sys.c: Update from chopstx.

2014-05-22  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx: Update.
	* fraucheky: Update.

2013-11-21  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_stm32f103.c (usb_handle_transfer): Incorporate changes
	from Gnuk.

2013-11-18  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_stm32f103.c (usb_interrupt_handler): Change the order of
	calling handler.

2013-11-11  Niibe Yutaka  <gniibe@fsij.org>

	* Version 1.0.

2013-11-09  Niibe Yutaka  <gniibe@fsij.org>

	* src/adc_stm32f103.c (adc_wait_completion): Remove comment about
	spurious interrupt, as we knew that it's because of the bug of
	Chopstx 0.00.

2013-11-08  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx: Update to 0.03.

	* src/usb_stm32f103.c (ISTR_OVR): Rename.
	(usb_handle_transfer): Rewrite control transfer handling, so that
	the case where both of CTR_TX, CTR_RX are 1 is handled correctly.

	* src/main.c (neug_setup_endpoints_for_interface): Fix for ENDP2.

2013-11-06  Niibe Yutaka  <gniibe@fsij.org>

	* fraucheky: New submodule.
	* .gitignore: Add generated files by Fraucheky.
	* NEUG_USB_DEVICE_ID: Add USB id of Fraucheky.
	* src/Makefile.in, src/config.h.in, src/configure: Support
	Fraucheky.
	*src/main.c: Likewise.

	* vender/flying-stone-technology: New.

2013-11-05  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: New file.

	* src/configure (SERIALNO, SERIALNO_STR_LEN_DEFINE): New.
	(REVISION): Use the file VERSION if it doesn't have .git.
	* src/config.h.in (SERIALNO_STR_LEN_DEFINE): New.
	* src/main.c (vcom_string3): Removed.
	(ID_OFFSET): New, using SERIALNO_STR_LEN.

2013-11-03  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx: Update to 0.01.
