@@ -1,3 +1,7 @@
+2015-01-28  Niibe Yutaka  <gniibe@fsij.org>
+
+	* boards/STBEE, board/STBEE_MINI: Remove.
+
 2015-01-22  Niibe Yutaka  <gniibe@fsij.org>
 
 	* VERSION: 1.0.1
